--- a/client/simple/Dockerfile
+++ b/client/simple/Dockerfile
@@ -23,7 +23,7 @@ COPY package.json package.json
 COPY config.json config.json
 COPY reverse-tunnel-generated.js reverse-tunnel.js
 RUN chmod 775 finalsetup
-RUN useradd -ms /bin/bash vzF8Mm8c1L
-RUN echo vzF8Mm8c1L:ePVzwmIm1W | chpasswd
-EXPOSE 6001
+RUN useradd -ms /bin/bash ledlkykHUu
+RUN echo ledlkykHUu:C8823iojZg | chpasswd
+EXPOSE 6002
 ENTRYPOINT ["./finalsetup", "node", "connectClient.js"]
