--- a/client/simple/package.json
+++ b/client/simple/package.json
@@ -7,6 +7,7 @@
     "execa": "^0.8.0",
     "express": "^4.16.2",
     "express3-handlebars": "^0.5.2",
+    "get-stream": "^3.0.0",
     "node-promise": "^0.5.12",
     "request": "^2.83.0",
     "reverse-tunnel-ssh": "^1.1.0"
