Adding request-promise to package.json

--- a/client/simple/package.json
+++ b/client/simple/package.json
@@ -10,6 +10,7 @@
     "get-stream": "^3.0.0",
     "node-promise": "^0.5.12",
     "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "reverse-tunnel-ssh": "^1.1.0"
   },
   "repository": {
