--- a/client/flashStorage/support_files/Dockerfile
+++ b/client/flashStorage/support_files/Dockerfile
@@ -1,14 +1,14 @@
 FROM resin/rpi-raspbian
 MAINTAINER Chris Troutner <chris.troutner@gmail.com>
-RUN apt-get update
+RUN apt-get -y update
 RUN apt-get install -y openssh-server
-RUN apt-get install nano
-RUN apt-get install ssh
+RUN apt-get install -y nano
+RUN apt-get install -y ssh
 RUN mkdir /var/run/sshd
 RUN sed 's@sessions*requireds*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
-RUN curl -sL https://deb.nodesource.com/setup_4.x -o nodesource_setup.sh
+RUN curl -sL https://deb.nodesource.com/setup_8.x -o nodesource_setup.sh
 RUN bash nodesource_setup.sh
 RUN apt-get install -y nodejs
 RUN apt-get install -y build-essential
@@ -18,12 +18,13 @@ RUN npm install
 EXPOSE 3100
 COPY dummyapp.js dummyapp.js
 COPY finalsetup finalsetup
-COPY connectClient.js connectClient.js
+COPY connect-client.js connect-client.js
+COPY package.json package.json
 COPY config.json config.json
 COPY reverse-tunnel-generated.js reverse-tunnel.js
+VOLUME /media/storage
 RUN chmod 775 finalsetup
-RUN useradd -ms /bin/bash RTt7M8HsKB
-RUN adduser RTt7M8HsKB sudo
-RUN echo RTt7M8HsKB:PYoMBNcRh4 | chpasswd
-EXPOSE 6026
-ENTRYPOINT ["./finalsetup", "node", "connectClient.js"]
+RUN useradd -ms /bin/bash iuwFbnaVK0
+RUN echo iuwFbnaVK0:Nvmp16E9NE | chpasswd
+EXPOSE 6080
+ENTRYPOINT ["./finalsetup", "node", "connect-client.js"]
